--- a/index.html
+++ b/index.html
@@ -8,6 +8,28 @@
     <title>Document</title>
 </head>
 <body>
-    
+    <div class="calc-display">5 + 3</div>
+    <div class="grid-container">
+        <div class="calc-buttons">C</div>
+        <div class="calc-buttons">+/-</div>
+        <div class="calc-buttons">%</div>
+        <div class="calc-buttons">/</div>
+        <div class="calc-buttons">7</div>
+        <div class="calc-buttons">8</div>
+        <div class="calc-buttons">9</div>
+        <div class="calc-buttons">*</div>
+        <div class="calc-buttons">4</div>
+        <div class="calc-buttons">5</div>
+        <div class="calc-buttons">6</div>
+        <div class="calc-buttons">-</div>
+        <div class="calc-buttons">1</div>
+        <div class="calc-buttons">2</div>
+        <div class="calc-buttons">3</div>
+        <div class="calc-buttons">+</div>
+        <div class="calc-buttons">0</div>
+        <div class="calc-buttons"></div>
+        <div class="calc-buttons">.</div>
+        <div class="calc-buttons">=</div>
+    </div>
 </body>
 </html>
