--- a/index.html
+++ b/index.html
@@ -8,9 +8,9 @@
     <title>Document</title>
 </head>
 <body>
-    <div class="calc-display">5 + 3</div>
+    <div class="calc-display">8</div>
     <div class="grid-container">
-        <div class="calc-buttons">C</div>
+        <div class="calc-buttons" id="clearButton">C</div>
         <div class="calc-buttons">+/-</div>
         <div class="calc-buttons">%</div>
         <div class="calc-buttons">/</div>
